...
              children: [
                const SizedBox(height: 600.0),
                Row(
                  mainAxisAlignment: MainAxisAlignment.center,
                  children: [
                    ElevatedButton(
                      key: const Key('login_button'),
                      onPressed: showLogin,
                      style: ButtonStyle(
                        backgroundColor: MaterialStateProperty.all<Color>(
                            Colors.grey.withOpacity(0.3)),
                      ),
                      child: const Text('LOGIN'),
...
              ),
              Column(
                mainAxisSize: MainAxisSize.min,
                children: [
                  const SizedBox(height: 32),
                  TextField(
                    key: const Key('login_email_field'),
                    decoration: const InputDecoration(
                      labelText: 'Email',
                      border: OutlineInputBorder(
                        borderSide: BorderSide(),
                      ),
                    ),
                    onChanged: (value) => email = value,
                  ),
                  const SizedBox(height: 8),
                  TextField(
                    key: const Key('login_password_field'),
                    obscureText: true,
                    decoration: const InputDecoration(
                      labelText: 'Password',
                      border: OutlineInputBorder(
                        borderSide: BorderSide(),
                      ),
...
                    onChanged: (value) => password = value,
                  ),
                ],
              ),
              const SizedBox(height: 32),
              ElevatedButton(
                key: const Key('login_submit_button'),
                onPressed: () => onLogin(email, password),
                child: const Text('Login'),
              ),
            ],
          ),
        ),
...
